--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: gitvrsion
           file: gitversion/Dockerfile
           push: false
           tags: joergzeidler/app:latest
