--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: gitversion
+          context: {context}/gitversion
           file: gitversion/Dockerfile
           tags: joergzeidler/app:latest
