--- a/gitversion/Dockerfile
+++ b/gitversion/Dockerfile
@@ -3,17 +3,17 @@ FROM gittools/gitversion:5.6.11-alpine.3.12-x64-5.0
 # install necessary tooling for jq installation
 RUN apk add bash jq py3-jinja2 --no-cache
 # copy GitVersion configuration
-COPY gitversion/GitVersion.yaml /tools/GitVersion.yaml
+COPY GitVersion.yaml /tools/GitVersion.yaml
 
 # copy cpp header generation
-COPY gitversion/gen_cpp_header  /tools/gen_cpp_header
+COPY gen_cpp_header  /tools/gen_cpp_header
 RUN chmod +x /tools/gen_cpp_header/gen_version_header.py
 
 # copy template generation file
-COPY gitversion/templates  /tools/templates
+COPY templates  /tools/templates
 
 # copy script for semantic versioning generation
-COPY gitversion/entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
